# weather1-polymarket

./: .env.example  .gitignore  README.md  analyze.py  railway.json
backend/: .env.railway.example  database.py  main.py  nixpacks.toml  pyproject.toml  scheduler.py
backend/backtest/: __init__.py  fill_model.py  metrics.py  risk_replay.py  runner.py
backend/ingestion/: __init__.py  noaa.py  nws.py  openmeteo.py  polymarket.py  seed_stations.py  settlement_sources.py  stations.py  top_wallets.py
backend/models/: __init__.py  backtest.py  ingestion_logs.py  logs.py  market_prices.py  markets.py  positions.py  settlement_source.py  shadow.py  signals.py  top_wallets.py  weather.py
backend/routers/: __init__.py  backtest.py  ingestion.py  logs.py  markets.py  portfolio.py  prices.py  risk.py  settlement.py  shadow.py  signals.py  wallets.py  weather.py
backend/strategy/: __init__.py  engine.py  module1_market_type.py  module2_probability_gap.py  module4_wallet_confirmation.py  module5_liquidity.py  shadow_observer.py
data/: .gitkeep  top100_wallets.json
data/raw/: polymarket_weather_top100.html
docs/: phase0_plan.md  phase6_day4_research_closeout.md  phase6b_diagnosis.md  phase6k_checkpoint.md  requirements_future_test_protocol.md
frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/backtest/: page.tsx
frontend/app/logs/: page.tsx
frontend/components/: MockChart.tsx  Sidebar.tsx  StatCard.tsx
frontend/lib/: api.ts
(+7 files in other folders)
