[project]
name = "weather1-backend"
version = "0.1.0"
description = "Weather1 Polymarket Weather Edge Engine — FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.21",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "apscheduler>=3.10.4",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.0",
]
